# vanilla-rag-architecture

./: .env.template  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/core/: __init__.py  config.py  exceptions.py
backend/src/prompts/: __init__.py  rag_system.md  vision_caption.md
backend/src/routes/: __init__.py  chat.py  health.py  rag.py
backend/src/services/: __init__.py  conversation_service.py  document_service.py  rag_service.py
backend/src/tools/: __init__.py  embedding_tool.py  ollama_tool.py  reranker_tool.py  text_splitter_tool.py  vector_store_tool.py  vision_tool.py
frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/features/: ChatPanel.tsx  FileUpload.tsx  SettingsPanel.tsx  ThemeToggle.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Spinner.tsx  StatusBadge.tsx  TextArea.tsx  index.ts
frontend/src/services/: index.ts  rag.service.ts
frontend/src/stores/: chatStore.ts  index.ts  themeStore.ts
frontend/src/types/: index.ts
ollama/: Dockerfile  entrypoint.sh
